src/index.scss
/* ... */
.widgets {
  padding: 0;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  .widget {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin: 0.4em;
    width: 11em;
    height: 7em;
    background-color: #eee;
    border-bottom: 3px solid #ccc;
    padding: 1em;
    padding-top: 0.5em;
    user-select: none;
    &:hover {
      background-color: #fafafa;
    }
    .widget-title,
    .widget-subtitle {
      display: flex;
      flex-grow: 1;
      font-weight: normal;
      align-items: center;
      color: #999;
      padding: 0.4em 0.2em;
      text-transform: uppercase;
    }
    .widget-title {
      font-size: 1.2em;
      position: relative;
      .tooltip {
        display: none;
        position: absolute;
        z-index: 9999;
        top: 0;
        right: 0;
        margin: 1em;
        background-color: #eee;
        box-shadow: 0 0 4px #888;
        color: #777;
        padding: 0.5em;
        min-width: 9em;
        max-width: 16em;
        text-transform: none;
        font-size: 0.9em;
      }
      .tooltip-icon {
        position: absolute;
        right: 0;
        opacity: 0.6;
        cursor: help;
        &:hover {
          opacity: 1;
          & + .tooltip {
            display: flex;
          }
        }
      }
    }
    .widget-button-wrapper {
      position: relative;
      font-size: 0.95em;
      .widget-button {
        display: flex;
        flex-shrink: 0;
        font-weight: bold;
        border: 0;
        padding: 0;
        height: 11em;
        width: 13em;
        cursor: pointer;
        user-select: none;
        &:hover {
          opacity: 0.8;
          .widget-title {
            background-color: #444;
          }
        }
      }
    }
  }
}

.title .logo {
  font-size: 1rem;
}

.message-notification {
  display: inline-block;
  background-color: #ddd;
  padding: 0.5em 1em;
  min-width: 16em;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  border: 2px solid #444;
  text-align: center;
}

.message-notification[data-type="success"] {
  background-color: #d3ffc5;
  border-color: #003b08;
  color: #002004;
}

.message-notification[data-type="warning"] {
  background-color: #ffe6b0;
  border-color: #945400;
  color: #442700;
}

.message-notification[data-type="error"] {
  background-color: #ffb0b0;
  border-color: #5a0000;
  color: #520000;
}

.best_words_list {
  background-color: #eee;
  padding: 0.5em;
  padding-left: 2em;
  text-align: left;
  text-transform: uppercase;
  border: 1px solid #ddd;
  color: #333;
}

.toolbar {
  height: 3em;
  display: flex;
  align-items: stretch;
  background-color: #4b4b4b;
  flex-grow: 0;
  .settings-button,
  .back-button {
    padding: 0.52em 0.6em;
    margin: 0.3em;
  }
  .title {
    flex-grow: 1;
    font-size: 1.2rem;
    font-weight: normal;
    margin: 0;
    padding: 0.5em;
    padding-left: 1.5em;
    color: #ccc;
    text-align: center;
    text-transform: none;
  }
  .gold_counter {
    cursor: pointer;
    display: flex;
    align-items: center;
    background: linear-gradient(122deg, #d1b600 0%, #d5bb01 18%, #e3c800 46%);
    border-bottom: 3px solid #d8bf00;
    color: white;
    font-size: 1.4em;
    user-select: none;
    padding: 0.25em;
    padding-right: 0.7em;
    min-width: 4em;
    color: #fffdda;
    text-shadow: #111 1px 0px 3px;
    &:hover {
      background: linear-gradient(122deg, lighten(#d1b600, 2%) 0%, lighten(#d5bb01, 2%) 18%, lighten(#e3c800, 2%) 46%);
      border-bottom-color: #dbc200;
    }
  }
  .gold_coin_image {
    height: 0.8em;
    width: 0.8em;
    padding: 0 6px;
  }
}

.progress_bar {
  position: relative;
  width: 15em;
  border: 1px solid #3337;
  margin-top: 1.3em;
  height: 1.6em;
  background-color: #fffe;
  color: #444;
  .progress_bar_progress {
    background-color: #ddd;
    height: 1.6em;
    transition: all 1s linear;
  }
  .progress_bar_content {
    position: absolute;
    top: 0;
    left: 0.3em;
    right: 0.3em;
    bottom: 0;
  }
}

.challenges {
  font-size: 0.75em;
  background-color: #fff0c8;
  width: 22em;
  .challenges-title {
    margin: 0;
    padding: 0.8em;
    padding-bottom: 0.1em;
    font-weight: normal;
    color: #bb9a2e;
  }
  .challenge {
    position: relative;
    opacity: 0.95;
    padding: 0.8em;
    margin: 0.9em;
    opacity: 0.9;
    cursor: pointer;
    user-select: none;
    color: #eee;
    background: linear-gradient(122deg, #d1b600 0%, #d5bb01 18%, #e3c800 46%);
    border-bottom: 3px solid #c0aa00;
    &[data-status="redeemed"] {
      opacity: 0.3;
    }
    &[data-status="acheived"] {
      opacity: 1;
      border: 3px solid #b49f01;
      border-bottom-color: #7c6e00;
      &:hover {
        border-bottom-color: #7c6e00;
      }
    }
    &[data-status="superseded"] {
      opacity: 0.7;
    }
    &:hover {
      background: linear-gradient(122deg, lighten(#e3c800, 2%) 0%, lighten(#d5bb01, 2%) 18%, lighten(#e3c800, 2%) 46%);
      border-bottom-color: #dbc200;
    }
    &:last-child {
      border-bottom: none;
    }
    .challenge-icon {
      margin: 0.2em;
      position: absolute;
      right: 0;
      top: 0;
      opacity: 0.7;
    }
    .challenge-title {
      margin: 0.2em 0;
      color: #fcf486;
      text-shadow: #111 1px 0px 3px;
    }
    .challenge-reward {
      display: flex;
      display: inline-block;
      margin: 0;
      margin-top: 0.5em;
      padding: 0.2em;
      text-shadow: #111 1px 0px 2px;
      background-color: #eec922;
      border: 1px solid #e4db61;
      color: #fffdda;
      padding-right: 0.6em;
      .challenge-reward-icon {
        margin-right: 0.3em;
        float: left;
      }
    }
    .challenge-description {
      margin: 0;
      margin-top: 0.2em;
      text-shadow: #111 1px 0px 3px;
    }
    .challenge-redeem-reward {
      font-size: 0.9em;
      padding: 0.8em;
      margin-top: 0.8em;
    }
    .progress_bar {
      margin-top: 0.7em;
      border-color: #af9208;
    }
  }
}
/* ... */

